// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers - ReactHelpers flattenFragments: no wrapper 1`] = `
Array [
  <li>
    Item 1
  </li>,
  <li>
    Item 2
  </li>,
]
`;

exports[`Helpers - ReactHelpers flattenFragments: with wrapper 1`] = `
Array [
  <Wrapper>
    <li>
      Item 1
    </li>
  </Wrapper>,
  <Wrapper>
    <li>
      Item 2
    </li>
  </Wrapper>,
]
`;
